--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PasswordNoteBook"
         mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="450">
+        Title="MainWindow" Height="650" Width="500">
     <Grid>
 
         <TabControl x:Name="tabControl">
@@ -25,38 +25,38 @@
             </TabItem>
             <TabItem Header="SearchTab" Visibility="Collapsed">
                 <Grid Background="#FFE5E5E5">
-                    <Button Content="Search" HorizontalAlignment="Center" Margin="0,209,0,0" VerticalAlignment="Top" Click="SearchBtnClicked" Height="34" Width="62" x:Name="SearchBtn"/>
+                    <Button Content="Search" HorizontalAlignment="Center" Margin="0,209,0,0" VerticalAlignment="Top" Click="SearchBtnClicked" Height="40" Width="62" x:Name="SearchBtn"/>
                     <TextBlock HorizontalAlignment="Center" Margin="0,382,0,0" TextWrapping="Wrap" Text="Pass" VerticalAlignment="Top" x:Name="Passtxt"/>
                 </Grid>
             </TabItem>
             <TabItem Header="AddTab" Visibility="Collapsed">
                 <Grid Background="#FFE5E5E5">
                     <TextBlock HorizontalAlignment="Center" Margin="0,245,0,0" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top" FontSize="20" x:Name="PasswordTxt"/>
-                    <TextBox HorizontalAlignment="Center" Margin="0,277,0,0" TextWrapping="Wrap" Text="Enter Password" VerticalAlignment="Top" Width="150" x:Name="tbxPasswordText" FontSize="20"/>
-                    <Button Content="Save" HorizontalAlignment="Center" Margin="0,327,0,0" VerticalAlignment="Top" Click="SavePasswordBtnClicked" Height="33" Width="62" x:Name="SaveBtn"/>
+                    <TextBox HorizontalAlignment="Center" Margin="0,277,0,0" TextWrapping="Wrap" Text="Enter Password" VerticalAlignment="Top" Width="200" x:Name="tbxPasswordText" FontSize="20"/>
+                    <Button Content="Save" HorizontalAlignment="Center" Margin="0,327,0,0" VerticalAlignment="Top" Click="SavePasswordBtnClicked" Height="40" Width="80" x:Name="SaveBtn" FontSize="16"/>
                 </Grid>
             </TabItem>
             <TabItem Header="AllTab" Visibility="Collapsed">
                 <Grid Background="#FFE5E5E5">
                     <TextBlock HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="All Data" VerticalAlignment="Top" FontSize="20"/>
+                    <Button Content="Sort" HorizontalAlignment="Left" Margin="0,100,0,0" VerticalAlignment="Center" Click="SortBtnClicked" Height="33" Width="60" FontSize="16"/>
+                    <Button Content="UnSort" HorizontalAlignment="Left" Margin="0,-100,0,0" VerticalAlignment="Center" Click="UnSortBtnClicked" Height="40" Width="60" FontSize="16"/>
+
                     <Grid Width="300" Height="400" Background="#000000">
-
                         <DataGrid Height="390" Width="290" x:Name="MyDataSet" AutoGenerateColumns="True"/>
-
-
                     </Grid>
                 </Grid>
             </TabItem>
             <TabItem Header="RemoveTab" Visibility="Collapsed">
                 <Grid Background="#FFE5E5E5">
-                    <Button Content="Remove" HorizontalAlignment="Center" Margin="0,209,0,0" VerticalAlignment="Top" Click="RemoveBtnClicked" Height="34" Width="62" x:Name="RemoveBtn"/>
+                    <Button Content="Remove" HorizontalAlignment="Center" Margin="0,209,0,0" VerticalAlignment="Top" Click="RemoveBtnClicked" Height="34" Width="80" x:Name="RemoveBtn"/>
                 </Grid>
             </TabItem>
         </TabControl>
-        <Button Content="Next Page" HorizontalAlignment="Right" Margin="0,0,22,22" VerticalAlignment="Bottom" Click="NextBtnClicked" Height="32" Width="62" x:Name="NextBtn"/>
-        <Button Content="Reset" HorizontalAlignment="Center" Margin="0,477,0,0" VerticalAlignment="Top" Click="ResetBtnClicked" Height="33" Width="62" x:Name="ResetBtn"/>
-        <Button Content="Home" HorizontalAlignment="Right" Margin="0,22,26,0" VerticalAlignment="Top" Click="HomeBtnClicked" Height="33" Width="62" x:Name="HomeBtn"/>
-        <TextBlock HorizontalAlignment="Center" Margin="0,142,0,0" TextWrapping="Wrap" Text="Service" VerticalAlignment="Top" FontSize="20" x:Name="ServiceTxt"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,172,0,0" TextWrapping="Wrap" Text="ServiceName" VerticalAlignment="Top" Width="150" FontSize="20" x:Name="tbxServiceName"/>
+        <Button Content="Next Page" HorizontalAlignment="Right" Margin="0,0,20,20" VerticalAlignment="Bottom" Click="NextBtnClicked" Height="40" Width="80" x:Name="NextBtn" FontSize="16"/>
+        <Button Content="Reset" HorizontalAlignment="Center" Margin="0,0,0,20" VerticalAlignment="Bottom" Click="ResetBtnClicked" Height="40" Width="80" x:Name="ResetBtn" FontSize="16"/>
+        <Button Content="Home" HorizontalAlignment="Right" Margin="0,20,20,0" VerticalAlignment="Top" Click="HomeBtnClicked" Height="40" Width="80" x:Name="HomeBtn" FontSize="16"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,150,0,0" TextWrapping="Wrap" Text="Service" VerticalAlignment="Top" FontSize="20" x:Name="ServiceTxt"/>
+        <TextBox HorizontalAlignment="Center" Margin="0,180,0,0" TextWrapping="Wrap" Text="ServiceName" VerticalAlignment="Top" Width="200" x:Name="tbxServiceName" FontSize="20"/>
     </Grid>
 </Window>
