--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,41 +6,71 @@
         xmlns:local="clr-namespace:PasswordNoteBook"
         mc:Ignorable="d"
         Title="MainWindow" Height="650" Width="500">
-    <Grid>
+    <Grid Height="630" Width="500" x:Name="RootGrid">
+
+        <Grid.Background>
+            <ImageBrush ImageSource="/images/background.png" Stretch="UniformToFill"/>
+        </Grid.Background>
+
+
 
         <TabControl x:Name="tabControl">
             <TabItem Header="LockScreenTab" Visibility="Collapsed">
-                <Grid Background="#FFE5E5E5">
-                    <Button Content="Unlock" HorizontalAlignment="Center" VerticalAlignment="Center" Height="103" Width="150" Click="OpenMainPageClicked" x:Name="LockBtn"/>
+                <Grid>
+                    <Grid.Background>
+                        <ImageBrush ImageSource="/images/background.png" Stretch="UniformToFill"/>
+                    </Grid.Background>
+
+                    <Button HorizontalAlignment="Center" VerticalAlignment="Center" Height="150" Width="150" Click="OpenMainPageClicked" x:Name="LockBtn" FontSize="32" Style="{StaticResource CustomFont}">
+                        <StackPanel>
+                            <Image Source="/images/lock.png"/>
+                        </StackPanel>
+                    </Button>
                 </Grid>
             </TabItem>
             <TabItem Header="MainMenuTab" Visibility="Collapsed">
-                <Grid Background="#FFE5E5E5">
-                    <TextBlock HorizontalAlignment="Center" Margin="0,70,0,0" TextWrapping="Wrap" Text="Content" VerticalAlignment="Top" FontSize="32"/>
-                    <Button Content="Open Register"  Margin="0,-70,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="RegisterOpenbtnClicked" x:Name="RegisterBtn" FontSize="20"/>
-                    <Button Content="Open Searcher" Margin="0,-210,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="SearcherOpenbtnClicked" x:Name="SearcherBtn" FontSize="20"/>
-                    <Button Content="Open Remover"  Margin="0,70,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="RemoverOpenbtnClicked" x:Name="RemoverBtn" FontSize="20"/>
-                    <Button Content="Open All" Margin="0,210,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="AllbtnClicked" x:Name="AllViewBtn" FontSize="20"/>
+                <Grid>
+                    <Grid.Background>
+                        <ImageBrush ImageSource="/images/background.png" Stretch="UniformToFill"/>
+                    </Grid.Background>
+
+                    <TextBlock HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="Content" VerticalAlignment="Top" FontSize="56" Style="{StaticResource CustomFont}" />
+                    <Button Content="Open Register"  Margin="0,-50,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="RegisterOpenbtnClicked" x:Name="RegisterBtn" FontSize="32" Style="{StaticResource CustomFont}"/>
+                    <Button Content="Open Searcher" Margin="0,-150,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="SearcherOpenbtnClicked" x:Name="SearcherBtn" FontSize="32" Style="{StaticResource CustomFont}"/>
+                    <Button Content="Open Remover"  Margin="0,50,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="RemoverOpenbtnClicked" x:Name="RemoverBtn" FontSize="32" Style="{StaticResource CustomFont}"/>
+                    <Button Content="Open All" Margin="0,150,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="AllbtnClicked" x:Name="AllViewBtn" FontSize="32" Style="{StaticResource CustomFont}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="SearchTab" Visibility="Collapsed">
-                <Grid Background="#FFE5E5E5">
-                    <Button Content="Search" HorizontalAlignment="Center" Margin="0,209,0,0" VerticalAlignment="Top" Click="SearchBtnClicked" Height="40" Width="62" x:Name="SearchBtn"/>
-                    <TextBlock HorizontalAlignment="Center" Margin="0,382,0,0" TextWrapping="Wrap" Text="Pass" VerticalAlignment="Top" x:Name="Passtxt"/>
+                <Grid>
+                    <Grid.Background>
+                        <ImageBrush ImageSource="/images/background.png" Stretch="UniformToFill"/>
+                    </Grid.Background>
+
+                    <Button Content="Search" HorizontalAlignment="Center" Margin="0,221,0,0" VerticalAlignment="Top" Click="SearchBtnClicked" Height="35" Width="80" x:Name="SearchBtn" FontSize="32" Style="{StaticResource CustomFont}"/>
+                    <TextBlock HorizontalAlignment="Center" Margin="0,386,0,0" TextWrapping="Wrap" Text="Pass" VerticalAlignment="Top" x:Name="Passtxt" FontSize="32" Style="{StaticResource CustomFont}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="AddTab" Visibility="Collapsed">
-                <Grid Background="#FFE5E5E5">
-                    <TextBlock HorizontalAlignment="Center" Margin="0,245,0,0" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top" FontSize="20" x:Name="PasswordTxt"/>
-                    <TextBox HorizontalAlignment="Center" Margin="0,277,0,0" TextWrapping="Wrap" Text="Enter Password" VerticalAlignment="Top" Width="200" x:Name="tbxPasswordText" FontSize="20"/>
-                    <Button Content="Save" HorizontalAlignment="Center" Margin="0,327,0,0" VerticalAlignment="Top" Click="SavePasswordBtnClicked" Height="40" Width="80" x:Name="SaveBtn" FontSize="16"/>
+                <Grid>
+                    <Grid.Background>
+                        <ImageBrush ImageSource="/images/background.png" Stretch="UniformToFill"/>
+                    </Grid.Background>
+
+                    <TextBlock HorizontalAlignment="Center" Margin="0,235,0,0" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top" FontSize="32" Style="{StaticResource CustomFont}" x:Name="PasswordTxt"/>
+                    <TextBox HorizontalAlignment="Center" Margin="0,280,0,0" TextWrapping="Wrap" Text="Enter Password" VerticalAlignment="Top" Width="200" x:Name="tbxPasswordText" FontSize="32" Style="{StaticResource CustomFont}"/>
+                    <Button Content="Save" HorizontalAlignment="Center" Margin="0,370,0,0" VerticalAlignment="Top" Click="SavePasswordBtnClicked" Height="40" Width="80" x:Name="SaveBtn" FontSize="32" Style="{StaticResource CustomFont}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="AllTab" Visibility="Collapsed">
-                <Grid Background="#FFE5E5E5">
-                    <TextBlock HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="All Data" VerticalAlignment="Top" FontSize="20"/>
-                    <Button Content="Sort" HorizontalAlignment="Left" Margin="0,100,0,0" VerticalAlignment="Center" Click="SortBtnClicked" Height="33" Width="60" FontSize="16"/>
-                    <Button Content="UnSort" HorizontalAlignment="Left" Margin="0,-100,0,0" VerticalAlignment="Center" Click="UnSortBtnClicked" Height="40" Width="60" FontSize="16"/>
+                <Grid>
+                    <Grid.Background>
+                        <ImageBrush ImageSource="/images/background.png" Stretch="UniformToFill"/>
+                    </Grid.Background>
+
+                    <TextBlock HorizontalAlignment="Center" Margin="0,30,0,0" TextWrapping="Wrap" Text="All Data" VerticalAlignment="Top" FontSize="32" Style="{StaticResource CustomFont}"/>
+                    <Button Content="Sort" HorizontalAlignment="Left" Margin="0,150,0,0" VerticalAlignment="Center" Click="SortBtnClicked" Height="33" Width="60" FontSize="24" Style="{StaticResource CustomFont}"/>
+                    <Button Content="UnSort" HorizontalAlignment="Left" Margin="0,-50,0,0" VerticalAlignment="Center" Click="UnSortBtnClicked" Height="40" Width="60" FontSize="24" Style="{StaticResource CustomFont}"/>
 
                     <Grid Width="300" Height="400" Background="#000000">
                         <DataGrid Height="390" Width="290" x:Name="MyDataSet" AutoGenerateColumns="True"/>
@@ -48,15 +78,19 @@
                 </Grid>
             </TabItem>
             <TabItem Header="RemoveTab" Visibility="Collapsed">
-                <Grid Background="#FFE5E5E5">
-                    <Button Content="Remove" HorizontalAlignment="Center" Margin="0,209,0,0" VerticalAlignment="Top" Click="RemoveBtnClicked" Height="34" Width="80" x:Name="RemoveBtn"/>
+                <Grid>
+                    <Grid.Background>
+                        <ImageBrush ImageSource="/images/background.png" Stretch="UniformToFill"/>
+                    </Grid.Background>
+
+                    <Button Content="Remove" HorizontalAlignment="Center" Margin="0,-50,0,0" VerticalAlignment="Center" Click="RemoveBtnClicked" Height="34" Width="100" x:Name="RemoveBtn" FontSize="32" Style="{StaticResource CustomFont}"/>
                 </Grid>
             </TabItem>
         </TabControl>
-        <Button Content="Next Page" HorizontalAlignment="Right" Margin="0,0,20,20" VerticalAlignment="Bottom" Click="NextBtnClicked" Height="40" Width="80" x:Name="NextBtn" FontSize="16"/>
-        <Button Content="Reset" HorizontalAlignment="Center" Margin="0,0,0,20" VerticalAlignment="Bottom" Click="ResetBtnClicked" Height="40" Width="80" x:Name="ResetBtn" FontSize="16"/>
-        <Button Content="Home" HorizontalAlignment="Right" Margin="0,20,20,0" VerticalAlignment="Top" Click="HomeBtnClicked" Height="40" Width="80" x:Name="HomeBtn" FontSize="16"/>
-        <TextBlock HorizontalAlignment="Center" Margin="0,150,0,0" TextWrapping="Wrap" Text="Service" VerticalAlignment="Top" FontSize="20" x:Name="ServiceTxt"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,180,0,0" TextWrapping="Wrap" Text="ServiceName" VerticalAlignment="Top" Width="200" x:Name="tbxServiceName" FontSize="20"/>
+        <Button Content="Next Page" HorizontalAlignment="Right" Margin="0,0,18,13" VerticalAlignment="Bottom" Click="NextBtnClicked" Height="40" Width="100" x:Name="NextBtn" FontSize="24" Style="{StaticResource CustomFont}"/>
+        <Button Content="Reset" HorizontalAlignment="Center" Margin="0,580,0,0" VerticalAlignment="Top" Click="ResetBtnClicked" Height="40" Width="80" x:Name="ResetBtn" FontSize="32" Style="{StaticResource CustomFont}"/>
+        <Button Content="Home" HorizontalAlignment="Right" Margin="0,14,18,0" VerticalAlignment="Top" Click="HomeBtnClicked" Height="40" Width="80" x:Name="HomeBtn" FontSize="32" Style="{StaticResource CustomFont}"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,141,0,0" TextWrapping="Wrap" Text="Service" VerticalAlignment="Top" FontSize="32" x:Name="ServiceTxt" Style="{StaticResource CustomFont}"/>
+        <TextBox HorizontalAlignment="Center" Margin="0,185,0,0" TextWrapping="Wrap" Text="ServiceName" VerticalAlignment="Top" Width="200" x:Name="tbxServiceName" FontSize="32" Style="{StaticResource CustomFont}"/>
     </Grid>
 </Window>
